# crepedb

./: .gitignore  Cargo.toml  README.md
backends/mdbx/: Cargo.toml
backends/mdbx/src/: db.rs  lib.rs  range.rs  read.rs  table.rs  write.rs
backends/redb/: Cargo.toml
backends/redb/src/: db.rs  lib.rs  range.rs  read.rs  table.rs  types.rs  write.rs
backends/rocksdb/: Cargo.toml
backends/rocksdb/src/: db.rs  lib.rs  range.rs  read.rs  table.rs  write.rs
backends/sled/: Cargo.toml
core/: Cargo.toml
core/src/: backend.rs  db.rs  error.rs  lib.rs  read_table.rs  read_txn.rs  types.rs  write_table.rs  write_txn.rs
core/src/types/: bytes.rs  data_op.rs  mod.rs  snapshot.rs  version.rs
core/src/utils/: index.rs  mod.rs  snapshot.rs  table.rs
crepedb/: Cargo.toml
crepedb/src/: backend.rs  db.rs  error.rs  lib.rs  read_table.rs  read_txn.rs  table.rs  types.rs  write.rs  write_table.rs  write_txn.rs
crepedb/src/basic/: db.rs  mod.rs  read.rs
crepedb/src/types/: bytes.rs  data_op.rs  mod.rs  snapshot.rs  table_type.rs  version.rs
crepedb/src/utils/: consts.rs  index.rs  mod.rs  parse.rs  snapshot.rs  table.rs
crepedb/src/versioned/: db.rs  mod.rs  read.rs  utils.rs  write.rs
docs/: design.md
mem/: Cargo.toml
mem/src/: lib.rs
redb/: Cargo.toml
redb/src/: db.rs  lib.rs  range.rs  read.rs  table.rs  types.rs
tool/: Cargo.toml  README.md
tool/src/: lib.rs  snapshot.rs  table.rs  tool.rs
