[workspace]
resolver = "2"
members = [
  "crepedb",
  "backends/redb",
  "tool",
  "backends/sled",
  "backends/mdbx",
  "backends/rocksdb",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "An versioned and forkable embedded Key-Value database."
license = "Apache-2.0"
repository = "https://github.com/tiannian/crepedb"

[workspace.dependencies]
log = "0.4.20"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

# utils
seq-macro = "0.3.5"

crepedb = { path = "crepedb", version = "0.1" }
