[workspace]
resolver = "2"
members = [
  "crepedb",
  "backends/redb",
  "backends/rocksdb",
  "backends/mdbx",
  "tool",
  # "backends/sled",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
description = "An versioned and forkable embedded Key-Value database."
license = "Apache-2.0"
repository = "https://github.com/tiannian/crepedb"
readme = "./README.md"

[workspace.dependencies]
log = "0.4.20"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

# utils
seq-macro = "0.3.5"

crepedb-core = { path = "crepedb", version = "0.1" }
crepedb-redb = { path = "backends/redb", version = "0.1" }
crepedb-rocksdb = { path = "backends/rocksdb", version = "0.1" }
crepedb-mdbx = { path = "backends/mdbx", version = "0.1" }
