[package]
name = "crepedb-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
hex.workspace = true

seq-macro.workspace = true

log.workspace = true

[features]
default = []
tests = []
