[package]
name = "crepedb"
version = "0.1.4"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
crepedb-core = { workspace = true }
crepedb-redb = { workspace = true }
crepedb-rocksdb = { workspace = true }
crepedb-mdbx = { workspace = true }
