[package]
name = "crepedb-tool"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "crepedb"
path = "./src/tool.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive", "env"] }
