[package]
name = "crepedb-tool"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.16", features = ["derive", "env"] }

crepedb-core.workspace = true
crepedb-redb.workspace = true
