[package]
name = "crepedb-mdbx"
version = "0.1.2"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
crepedb-core = { workspace = true, features = ["tests"] }

log.workspace = true

libmdbx = "0.6.4"

[dev-dependencies]
env_logger = "0.11.2"
