[package]
name = "crepedb-redb"
version = "0.1.5"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
crepedb-core = { workspace = true, features = ["tests"] }

log.workspace = true

redb = "3.1.0"

[dev-dependencies]
env_logger = "0.11.2"
